@@ -12,6 +12,7 @@ ufw (0.30) UNRELEASED; urgency=low
     - better handle iptables < 1.4 (tested with 1.3.8)
     - allow alternate interpreter
   * write loglevel rules to user rules (LP: #459925)
+  * properly log INVALID packets for medium and higher (LP: #480789)
 
  -- Jamie Strandboge <jamie@ubuntu.com>  Mon, 09 Nov 2009 15:13:01 -0600
 
